lab1/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: my-webserver
  name: my-webserver
  namespace: my-first-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-webserver
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-webserver
    spec:
      containers:
      - image: nginx:1.25.1
        name: nginx
        resources: {}
status: {}
