lab1/resources/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-my-webserver
  namespace: my-first-ns
spec:
  podSelector:
    matchLabels:
      app: my-webserver
  ingress:
  - {}
  policyTypes:
  - Ingress
